--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,80 @@
 body {
-    background-color: aqua;
+    background-color: #f5f5f5;
+    font-family: 'Roboto', sans-serif;
+}
+
+.navbar {
+    background-color: #673ab7;
+    border-radius: 10px;
+}
+
+.navbar-brand,
+.navbar-nav .nav-link {
+    color: #fff !important;
+}
+
+.btn-primary {
+    background-color: #673ab7;
+    border-color: #673ab7;
+    border-radius: 10px;
+}
+
+.btn-primary:hover {
+    background-color: #5e35b1;
+    border-color: #5e35b1;
+}
+
+.table {
+    border-radius: 10px;
+}
+
+.table-dark {
+    background-color: #673ab7;
+    border-radius: 10px;
+}
+
+.table-dark th,
+.table-dark td {
+    border-color: #673ab7;
+}
+
+.table-dark th {
+    color: #fff;
+}
+
+.modal-content {
+    background-color: #fff;
+    border-radius: 15px;
+}
+
+.modal-header {
+    background-color: #673ab7;
+    color: #fff;
+    border-radius: 15px 15px 0 0;
+}
+
+.modal-footer {
+    background-color: #f5f5f5;
+    border-radius: 0 0 15px 15px;
+}
+
+.form-control {
+    border-color: #ccc;
+    border-radius: 10px;
+}
+
+.btn-secondary,
+.btn-secondary:hover {
+    background-color: #5e35b1;
+    border-color: #5e35b1;
+    color: #fff;
+    border-radius: 10px;
+}
+
+.footer {
+    background-color: #673ab7;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    border-radius: 15px;
 }
